--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="google-site-verification" content="saSLSECCSCMo0-wx-PWH8bZzMZOZPJ8C4b6_FCsFIF4" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Geometry Dash APK v2.2: Discover the Full Game Experience Without the Price Tag</title>
